modif syntax error pipe

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: agranger <agranger@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/07/29 09:54:25 by agranger          #+#    #+#              #
-#    Updated: 2022/07/21 23:47:39 by agranger         ###   ########.fr        #
+#    Updated: 2022/08/30 10:20:42 by agranger         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -30,7 +30,8 @@ SRCS =	ft_itoa.c \
 		ft_putchar_fd.c \
 		ft_putstr_fd.c \
 		ft_split.c \
-		ft_tolower.c
+		ft_tolower.c \
+		ft_substr.c
 
 OBJS = $(SRCS:.c=.o)
 
