word splitting done

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: agranger <agranger@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/07/29 09:54:25 by agranger          #+#    #+#              #
-#    Updated: 2022/09/12 16:03:40 by agranger         ###   ########.fr        #
+#    Updated: 2022/09/27 14:16:26 by agranger         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -35,7 +35,8 @@ SRCS =	ft_itoa.c \
 		ft_isalpha.c \
 		ft_isdigit.c \
 		ft_isalnum.c \
-		ft_atoi.c
+		ft_atoi.c \
+		is_charset_str.c
 
 OBJS = $(SRCS:.c=.o)
 
